[package]
name = "solidity-selector-miner"
version = "0.1.0"
authors = ["Anton Bukov <k06aaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sha3 = "0.8"
structopt = "0.3.21"
hex = "0.4.2"
